[tool.poetry]
name = "finance-app"
version = "0.1.0"
description = ""
authors = ["Uziel Linares <uziel.linares@protonmail.com>"]
readme = "README.md"
packages = [{include = "finance_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
